--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "pg-hstore": "^2.3.2",
     "pug": "2.0.0-beta11",
     "sequelize": "^4.33.4"
+  },
+  "devDependencies": {
+    "express-session": "^1.15.6"
   }
 }
