ログイン認証用のJWTをセッションに保存する機能を作成

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.4.0",
+    "jwt-decode": "^2.2.0",
     "morgan": "~1.9.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
