--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.8.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "helmet": "^3.8.2",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "pug": "2.0.0-beta11",
