--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "node_modules/mocha/bin/mocha"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
     "debug": "~2.6.9",
@@ -32,6 +34,8 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.6",
+    "mocha": "^6.1.4",
+    "supertest": "^4.0.2",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2"
   }
